--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Shynbergen</h1>
     <h2>WEB Technologies 1 (Front End)</h2>
     <h3>About Me</h3>
-    <p>Hello! My name is Шынберген. I enjoy going to the gym, reading books, 
+    <p>Hello! My name is Shynbergen. I enjoy going to the gym, reading books, 
        and I really like aesthetics. I believe in improving myself every day.</p>
 
     <h3>My Hobbies</h3>
