--- a/index.html
+++ b/index.html
@@ -116,6 +116,29 @@
     </tr>
 </table>
 
+<table border="1" width="100%">
+  <tr>
+    <td width="30%" valign="top">
+      <h3>Menu</h3>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About Me</a></li>
+        <li><a href="#">My Hobbies</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </td>
+
+    <td width="70%" valign="top">
+      <h3>Main Content</h3>
+      <p>
+        Welcome to my webpage!  
+        Here you can read about me, my hobbies, and my class schedule.  
+        This is an example of using a table for page layout.
+      </p>
+    </td>
+  </tr>
+</table>
+
 <h3>My Mood Today</h3>
 <p>Today I feel happy 😃, strong 💪, and motivated 🚀!</p>
 
